src/objects/RMA__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculated_Return_Date__c</fullName>
        <formula>CreatedDate +  $Setup.RMA_Settings__c.Default_Days_to_Complete_Return__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsOpportunityTooOld__c</fullName>
        <formula>if(( DateValue(CreatedDate) - Opportunity__r.CloseDate &gt;  $Setup.RMA_Settings__c.Max_Opportunity_Age__c ), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Opportunity Too Old?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RMAs</relationshipLabel>
        <relationshipName>RMAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Due_Date_Reason__c</fullName>
        <label>Override Due Date Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extenuating Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_Due_Date__c</fullName>
        <label>Override Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Credit_Amount__c</fullName>
        <formula>Returned_Total_Value__c -  RMA_Restocking_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMA Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RMA_Item_Count__c</fullName>
        <label>RMA Item Count</label>
        <summaryForeignKey>RMA_Item__c.RMA__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RMA_Open_Items__c</fullName>
        <inlineHelpText>Number of items flagged for return which are not yet returned.</inlineHelpText>
        <label>RMA Open Items</label>
        <summaryFilterItems>
            <field>RMA_Item__c.RMA_Item_Complete__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>RMA_Item__c.RMA__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RMA_Restocking_Amount__c</fullName>
        <formula>Returned_Total_Value__c *  Restocking_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMA Restocking Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RMA_Return_Due_Date__c</fullName>
        <formula>IF( ISBLANK( Override_Due_Date__c ) ,  Calculated_Return_Date__c ,  Override_Due_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMA Return Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Restocking_Charge__c</fullName>
        <defaultValue>$Setup.RMA_Settings__c.Restocking_Fee__c</defaultValue>
        <label>Restocking Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Returned_Total_Value__c</fullName>
        <label>Returned Total Value</label>
        <summarizedField>RMA_Item__c.Return_Value__c</summarizedField>
        <summaryForeignKey>RMA_Item__c.RMA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RMA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RMA{000000}</displayFormat>
        <label>RMA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Opportunity_Close_Date_LTE_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>IsOpportunityTooOld__c  == &apos;Yes&apos;</errorConditionFormula>
        <errorMessage>That opportunity is too old.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Override_Due_Date_Requires_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>IF( and(NOT( ISBLANK( Override_Due_Date__c ) ) ,  ISPICKVAL( Override_Due_Date_Reason__c , &apos;&apos;) ), true, false)</errorConditionFormula>
        <errorMessage>You must select an override reason if you override the due date.</errorMessage>
    </validationRules>
</CustomObject>